--- a/style.css
+++ b/style.css
@@ -3,13 +3,16 @@
     margin: auto;
 }
 
+#blkbox{
+    background-color: rgba(21, 20, 20, 0.700) ;
+    border-radius: 15px;
+    margin: 120px 220px; 
+    padding: 80px;
+}
+
 body{
     background-image: url(background.jpg);
     background-size: cover;
-}
-
-.container{
-    padding: 5%;
 }
 
 header{
@@ -18,7 +21,6 @@ header{
 }
 
 .nav-box{
-    border-color: rgb(30, 255, 0);
     background-color: rgb(30, 255, 0) ;
     padding: 10px;
     text-align: center;
@@ -27,11 +29,6 @@ header{
 section{
     margin-top: 50px;
     color: white;
-}
-
-.title {
-    font-size: 20px;
-    font-weight: 700;
 }
 
 .carica1 {
@@ -44,7 +41,7 @@ section{
 .carica2 {
     background-color: rgb(29, 204, 6);
     border-radius: 10px;
-    margin-right: 45%;
+    margin-right: 30%;
     padding: 20px;
 }
 
@@ -53,10 +50,4 @@ section{
     border-radius: 10px;
     margin-right: 80%;
     padding: 20px;
-}
-
-#blkbox{
-    background-color: rgba(21, 20, 20, 0.716) ;
-    border-radius: 15px;
-    margin: 120px 220px; 
 }
